[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
game-core = { path = "../game-core" }
protocol = { path = "../protocol" }
hecs = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
simplelog = { workspace = true }
